--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Ju Ho Nam <jhnamnam@gmail.com> (https://juhonamnam.github.io/)",
   "license": "MIT",
   "private": true,
-  "homepage": "https://juhonamnam.github.io/wedding-invitation",
+  "homepage": "https://shy251227.github.io/kakaotest",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
